--- a/source/css/sass/_mootor.nav.scss
+++ b/source/css/sass/_mootor.nav.scss
@@ -1,5 +1,11 @@
 //@import "compass/css3/transition";
 
+
+
+// general variables
+$nav-bar-height:  4.8em;
+
+
 // Navigation plugin
 
 @mixin base-anchor {
@@ -20,7 +26,8 @@ body, html {
 
 @mixin moo-header(
         $class: '.moo-header',
-        $navDisplay: inline
+        $navDisplay: inline, 
+        $height: $nav-bar-height
     ){
     #{$class} {
         text-align: left;
@@ -29,6 +36,7 @@ body, html {
         top:0;
         width: 100%;
         padding: .6em 1em;
+        height: $height;
         nav {
             position: absolute;
             margin-top: 0;
@@ -58,8 +66,9 @@ body, html {
     z-index: 9999; 
     position: fixed;
     bottom: 0;
-    width: 100%;
     padding: .5em 1em;
+    width: 100%;
+    height: $nav-bar-height;
     nav {
         text-align: center;
         a {
