--- a/source/css/sass/_mootor.nav.scss
+++ b/source/css/sass/_mootor.nav.scss
@@ -3,7 +3,7 @@
 
 
 // general variables
-$nav-bar-height:  4.8em;
+$nav-bar-height:  4.75em;
 
 
 // Navigation plugin
@@ -66,7 +66,7 @@ body, html {
     z-index: 9999; 
     position: fixed;
     bottom: 0;
-    padding: .5em 1em;
+    padding: 0 1em;
     width: 100%;
     height: $nav-bar-height;
     nav {
