--- a/source/css/sass/_mootor.nav.scss
+++ b/source/css/sass/_mootor.nav.scss
@@ -127,10 +127,12 @@ nav {
 
 // Hacks
  
-.moo-panel {
+.moo-panels, .moo-panel {
     // Prevents flicker on transform3d (iOS)    
     -webkit-transition-duration:0;
+    -webkit-backface-visibility: hidden;
     -webkit-transform:translate3d(0,0,0);
+     -webkit-transform: translateZ(0);
 }
 
 // section imports 
