CSS refactoring: reorganized code

--- a/source/css/mootor/nav/_tab.scss
+++ b/source/css/mootor/nav/_tab.scss
@@ -1,6 +1,6 @@
-
-// Navigation Tabs
-// -----------------------------------------------------------------------------------------
+/*
+ * Tabs
+ */
 
 .moo-nav-tabs-container {
     padding: 2em 0;
