--- a/source/css/mootor/ui/_badge.scss
+++ b/source/css/mootor/ui/_badge.scss
@@ -1,6 +1,6 @@
-
-// Icon badges
-// ---------------------------------------------------------------------------
+/*
+ * Badge
+ */
 
 .moo-sample-icon {
     background-color: #ccc;
