--- a/source/css/mootor/ui/_image.scss
+++ b/source/css/mootor/ui/_image.scss
@@ -1,6 +1,6 @@
-
-// Overlay image 
-// ---------------------------------------------------------------------------
+/*
+ * Image
+ */
 
 .moo-ui-image-container {
     background-color: #333;
