--- a/source/css/mootor/ui/_modal.scss
+++ b/source/css/mootor/ui/_modal.scss
@@ -1,6 +1,6 @@
-
-// Overlay modal
-// ---------------------------------------------------------------------------
+/*
+ * Modal
+ */
 
 .moo-ui-modal-placeholder {
     position: absolute;
