--- a/source/css/mootor/ui/_switch.scss
+++ b/source/css/mootor/ui/_switch.scss
@@ -1,6 +1,6 @@
-
-// Switch control
-// -----------------------------------------------------------------------------------
+/*
+ * Switch control
+ */
 
 .moo-ui-switch {
     @include background-image(linear-gradient(top, #ddd, #fff 45%));
