--- a/examples/views/index/index.haml
+++ b/examples/views/index/index.haml
@@ -1,6 +1,11 @@
-%nav
-    %a.moo-nav{:href=>"#core"} $
-    %a.moo-nav{:href=>"#gestures"} Gestures
-    %a.moo-nav{:href=>"#fx"} Fx
-    %a.moo-nav{:href=>"#geo"} Geo
-    %a.moo-nav{:href=>"#ui"} UI
+%nav.moo-list
+    %li
+        %a.moo-nav{:href=>"#core"} $
+    %li
+        %a.moo-nav{:href=>"#gestures"} Gestures
+    %li
+        %a.moo-nav{:href=>"#fx"} Fx
+    %li
+        %a.moo-nav{:href=>"#geo"} Geo
+    %li
+        %a.moo-nav{:href=>"#ui"} UI
