--- a/examples/views/index/index.html
+++ b/examples/views/index/index.html
@@ -1,7 +1,17 @@
-<nav>
-  <a class='moo-nav' href='#core'>$</a>
-  <a class='moo-nav' href='#gestures'>Gestures</a>
-  <a class='moo-nav' href='#fx'>Fx</a>
-  <a class='moo-nav' href='#geo'>Geo</a>
-  <a class='moo-nav' href='#ui'>UI</a>
+<nav class='moo-list'>
+  <li>
+    <a class='moo-nav' href='#core'>$</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#gestures'>Gestures</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#fx'>Fx</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#geo'>Geo</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#ui'>UI</a>
+  </li>
 </nav>
