--- a/source/css/mootor/core/_utilities.scss
+++ b/source/css/mootor/core/_utilities.scss
@@ -43,3 +43,8 @@
         clear: both;
     }
 }
+
+// A shorted version of the popular hack method to contain floats
+.clearfix {
+    @include moo-clearfix;
+}
