--- a/source/css/mootor/nav/_footer.scss
+++ b/source/css/mootor/nav/_footer.scss
@@ -1,7 +1,7 @@
 // Footer
 
 $nav-footer-background-color: $color-main;
-$nav-current: $blue-light;
+$nav-current: $color-dark-grey !default;
 
 .moo-footer {
     text-align: left;
