--- a/source/css/mootor/ui/_loading.scss
+++ b/source/css/mootor/ui/_loading.scss
@@ -2,8 +2,9 @@
  * "Loading..." animation
  */
 
-$loading-background-color: $dark-grey;
-$color-overlay-background: $light-grey;
+$loading-background-color: $color-dark-grey !default;
+$color-overlay-background: $color-light-grey !default;
+
 /*
  * Circles
  */
