- Deleted old image files for example app. + Improvements on CSS code

--- a/source/css/_mootor.scss
+++ b/source/css/_mootor.scss
@@ -1,6 +1,11 @@
-@import "mootor/core/color";
 @import "mootor/core/utilities";
+@import "mootor/core/color";
 @import "mootor/core/normalize";
 @import "mootor/core/type";
 @import "mootor/nav";
 @import "mootor/ui";
+
+@include moo-footer();
+@include moo-header();
+@include moo-hidden();
+@include moo-clearfix($class: ".clearfix");
