--- a/source/css/mootor/core/_color.scss
+++ b/source/css/mootor/core/_color.scss
@@ -1,17 +1,17 @@
-// App color swatches
+// Color
 
 // Swatches
 $color-grey: #666;
 $color-dark-grey: #333;
 $color-light-grey: #ddd;
 
-// main palette
+// Main palette
 $color-main: $color-grey;
 $color-accent: $color-grey;
 $color-neutral-light: $color-light-grey;
 $color-neutral-dark: $color-grey;
 
-// backgrounds
+// Backgrounds
 $color-bg-main: $color-neutral-light;
 $color-bg-alt: $color-neutral-dark;
 
