--- a/source/css/mootor/core/_utilities.scss
+++ b/source/css/mootor/core/_utilities.scss
@@ -2,21 +2,27 @@
  * Utilities
  */ 
 
-// Removes the element from the DOM
-@mixin moo-hidden {
-    display: none!important;
-}
+$visible-classname: ".moo-visible" !default;
+$hidden-classname: ".moo-hidden" !default;
+$clearfix-classname: ".moo-clearfix" !default;
 
 // Hides the element without removing it from the DOM
-@mixin moo-visually-hidden {
+@mixin moo-visually-hidden() {
     opacity: 0;
+}
+
+// Removes the element from the DOM
+@mixin moo-hidden() {
+    #{$hidden-classname} {
+        display: none;
+    }    
 }
 
 // A 0 px width/height element placed in the center of 
 // it's container
 // Used to place elements (like modals) in the center of 
 // the screen.
-@mixin moo-placeholder {
+@mixin moo-placeholder() {
     display: block;
     position: absolute;
     top: 50%;
@@ -31,20 +37,20 @@
 // Method shortened by Nicolas Gallager:
 // http://nicolasgallagher.com/micro-clearfix-hack/
 
-@mixin moo-clearfix {
-    &:before,
-    &:after {
-        // The use of `table` rather than `block` is only
-        // necessary if using `:before` to contain the
-        // top-margins of child elements.
-        display: table;
-    }
-    &:after {
-        clear: both;
+@mixin moo-clearfix(
+        $class: $clearfix-classname
+    ) {
+    #{$class} {
+        &:before,
+        &:after {
+            // The use of `table` rather than `block` is only
+            // necessary if using `:before` to contain the
+            // top-margins of child elements.
+            display: table;
+        }
+        &:after {
+            clear: both;
+        }
     }
 }
 
-// A shorted version of the popular hack method to contain floats
-.clearfix {
-    @include moo-clearfix;
-}
