--- a/examples/index.haml
+++ b/examples/index.haml
@@ -3,7 +3,6 @@
     %title Mootor sample app
     %meta{:name=>"viewport", :content=>"width=device-width,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"}
     %link{:href=>"css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
-    %link{:href=>"css/dev.css", :media=>"screen",  :rel=>"stylesheet"}
     
     %script{:src=>"../js/mootor.js",:type=>"text/javascript"}
     %script{:src=>"../js/plugins/nav.js",:type=>"text/javascript"}
@@ -19,7 +18,7 @@
         %nav
             %a#navBack.moo-nav-back{:href=>"#moo-nav-back"} Back
 
-        %h1 Sample app
+        %h1 Mootor demo
 
     #main
         #index.moo-panel
