--- a/examples/views/core/core.haml
+++ b/examples/views/core/core.haml
@@ -1,17 +1,32 @@
-%nav
-    %a.moo-nav{:href=>"#core_selector"} $()
-    %a.moo-nav{:href=>"#core_ready"} $().ready()
-    %a.moo-nav{:href=>"#core_find"} $().find()
-    %a.moo-nav{:href=>"#core_hide"} $().hide()
-    %a.moo-nav{:href=>"#core_show"} $().show()
-    %a.moo-nav{:href=>"#core_hasclass"} $().hasClass()
-    %a.moo-nav{:href=>"#core_setclass"} $().setClass()
-    %a.moo-nav{:href=>"#core_removeclass"} $().removeClass()
-    %a.moo-nav{:href=>"#core_on"} $().on()
-    %a.moo-nav{:href=>"#core_unbind"} $().unbind()
-    %a.moo-nav{:href=>"#core_html"} $().html()
-    %a.moo-nav{:href=>"#core_ajax"} $.ajax()
-    %a.moo-nav{:href=>"#core_extend"} $.extend()
-    %a.moo-nav{:href=>"#core_require"} $.require()
-    %a.moo-nav{:href=>"#core_context"} $.context
+%nav.moo-list.moo-list-navigation
+    %li
+        %a.moo-nav{:href=>"#core_selector"} $()
+    %li
+        %a.moo-nav{:href=>"#core_ready"} $().ready()
+    %li
+        %a.moo-nav{:href=>"#core_find"} $().find()
+    %li
+        %a.moo-nav{:href=>"#core_hide"} $().hide()
+    %li
+        %a.moo-nav{:href=>"#core_show"} $().show()
+    %li
+        %a.moo-nav{:href=>"#core_hasclass"} $().hasClass()
+    %li
+        %a.moo-nav{:href=>"#core_setclass"} $().setClass()
+    %li
+        %a.moo-nav{:href=>"#core_removeclass"} $().removeClass()
+    %li
+        %a.moo-nav{:href=>"#core_on"} $().on()
+    %li
+        %a.moo-nav{:href=>"#core_unbind"} $().unbind()
+    %li
+        %a.moo-nav{:href=>"#core_html"} $().html()
+    %li
+        %a.moo-nav{:href=>"#core_ajax"} $.ajax()
+    %li
+        %a.moo-nav{:href=>"#core_extend"} $.extend()
+    %li
+        %a.moo-nav{:href=>"#core_require"} $.require()
+    %li
+        %a.moo-nav{:href=>"#core_context"} $.context
     
