--- a/examples/views/fx/fx.haml
+++ b/examples/views/fx/fx.haml
@@ -1,2 +1,3 @@
-%nav
-    %a.moo-nav{:href=>"#fx_translate"} $().translate()
+%nav.moo-list.moo-list-navigation
+    %li
+        %a.moo-nav{:href=>"#fx_translate"} $().translate()
