--- a/examples/views/fx/fx.html
+++ b/examples/views/fx/fx.html
@@ -1,3 +1,5 @@
-<nav>
-  <a class='moo-nav' href='#fx_translate'>$().translate()</a>
+<nav class='moo-list moo-list-navigation'>
+  <li>
+    <a class='moo-nav' href='#fx_translate'>$().translate()</a>
+  </li>
 </nav>
