--- a/examples/views/ui/ui.html
+++ b/examples/views/ui/ui.html
@@ -1,12 +1,32 @@
-<nav>
-  <a class='moo-nav' href='#ui_checkbox'>Checkbox</a>
-  <a class='moo-nav' href='#ui_map'>Map</a>
-  <a class='moo-nav' href='#ui_option'>Option</a>
-  <a class='moo-nav' href='#ui_select'>Select</a>
-  <a class='moo-nav' href='#ui_text'>Text</a>
-  <a class='moo-nav' href='#ui_textarea'>TextArea</a>
-  <a class='moo-nav' href='#ui_toggleswitch'>ToggleSwitch</a>
-  <a class='moo-nav' href='#ui_overlay'>Overlay</a>
-  <a class='moo-nav' href='#ui_camera'>Camera</a>
-  <a class='moo-nav' href='#ui_simplecamera'>SimpleCamera</a>
+<nav class='moo-list moo-list-navigation'>
+  <li>
+    <a class='moo-nav' href='#ui_checkbox'>Checkbox</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#ui_map'>Map</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#ui_option'>Option</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#ui_select'>Select</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#ui_text'>Text</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#ui_textarea'>TextArea</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#ui_toggleswitch'>ToggleSwitch</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#ui_overlay'>Overlay</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#ui_camera'>Camera</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#ui_simplecamera'>SimpleCamera</a>
+  </li>
 </nav>
