--- a/examples/views/core/core.html
+++ b/examples/views/core/core.html
@@ -1,17 +1,47 @@
-<nav>
-  <a class='moo-nav' href='#core_selector'>$()</a>
-  <a class='moo-nav' href='#core_ready'>$().ready()</a>
-  <a class='moo-nav' href='#core_find'>$().find()</a>
-  <a class='moo-nav' href='#core_hide'>$().hide()</a>
-  <a class='moo-nav' href='#core_show'>$().show()</a>
-  <a class='moo-nav' href='#core_hasclass'>$().hasClass()</a>
-  <a class='moo-nav' href='#core_setclass'>$().setClass()</a>
-  <a class='moo-nav' href='#core_removeclass'>$().removeClass()</a>
-  <a class='moo-nav' href='#core_on'>$().on()</a>
-  <a class='moo-nav' href='#core_unbind'>$().unbind()</a>
-  <a class='moo-nav' href='#core_html'>$().html()</a>
-  <a class='moo-nav' href='#core_ajax'>$.ajax()</a>
-  <a class='moo-nav' href='#core_extend'>$.extend()</a>
-  <a class='moo-nav' href='#core_require'>$.require()</a>
-  <a class='moo-nav' href='#core_context'>$.context</a>
+<nav class='moo-list moo-list-navigation'>
+  <li>
+    <a class='moo-nav' href='#core_selector'>$()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_ready'>$().ready()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_find'>$().find()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_hide'>$().hide()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_show'>$().show()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_hasclass'>$().hasClass()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_setclass'>$().setClass()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_removeclass'>$().removeClass()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_on'>$().on()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_unbind'>$().unbind()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_html'>$().html()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_ajax'>$.ajax()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_extend'>$.extend()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_require'>$.require()</a>
+  </li>
+  <li>
+    <a class='moo-nav' href='#core_context'>$.context</a>
+  </li>
 </nav>
