--- a/examples/views/ui/ui.haml
+++ b/examples/views/ui/ui.haml
@@ -1,11 +1,21 @@
-%nav
-    %a.moo-nav{:href=>"#ui_checkbox"} Checkbox
-    %a.moo-nav{:href=>"#ui_map"} Map
-    %a.moo-nav{:href=>"#ui_option"} Option
-    %a.moo-nav{:href=>"#ui_select"} Select
-    %a.moo-nav{:href=>"#ui_text"} Text
-    %a.moo-nav{:href=>"#ui_textarea"} TextArea
-    %a.moo-nav{:href=>"#ui_toggleswitch"} ToggleSwitch
-    %a.moo-nav{:href=>"#ui_overlay"} Overlay
-    %a.moo-nav{:href=>"#ui_camera"} Camera
-    %a.moo-nav{:href=>"#ui_simplecamera"} SimpleCamera
+%nav.moo-list.moo-list-navigation
+    %li
+        %a.moo-nav{:href=>"#ui_checkbox"} Checkbox
+    %li
+        %a.moo-nav{:href=>"#ui_map"} Map
+    %li
+        %a.moo-nav{:href=>"#ui_option"} Option
+    %li
+        %a.moo-nav{:href=>"#ui_select"} Select
+    %li
+        %a.moo-nav{:href=>"#ui_text"} Text
+    %li
+        %a.moo-nav{:href=>"#ui_textarea"} TextArea
+    %li
+        %a.moo-nav{:href=>"#ui_toggleswitch"} ToggleSwitch
+    %li
+        %a.moo-nav{:href=>"#ui_overlay"} Overlay
+    %li
+        %a.moo-nav{:href=>"#ui_camera"} Camera
+    %li
+        %a.moo-nav{:href=>"#ui_simplecamera"} SimpleCamera
