--- a/source/css/_mootor.scss
+++ b/source/css/_mootor.scss
@@ -1,6 +1,6 @@
+@import "mootor/core/normalize";
 @import "mootor/core/utilities";
 @import "mootor/core/color";
-@import "mootor/core/normalize";
 @import "mootor/core/type";
 @import "mootor/nav";
 @import "mootor/ui";
@@ -8,4 +8,5 @@
 @include moo-footer();
 @include moo-header();
 @include moo-hidden();
+@include moo-list();
 @include moo-clearfix($class: ".clearfix");
